src/App.css
/* @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap'); */
@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');

@font-face {
  font-family: 'Pixel' ;
  src: url('/resources/fonts/FreePixel.ttf') format('truetype');
}

html {
  scroll-padding-top: 8rem;
  overflow-x: hidden;
}

*{
  scroll-behavior: smooth !important;
}

body, button {
  font-family: "Pixel";
  /* font-family: 'Inter', sans-serif; */
}

#loading {
  position: fixed;
  display: flex;
  justify-content: center;
  align-items: flex-end;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background-color: #111827;
  z-index: 99;
}

#loading-image {
  z-index: 100;
  max-width:100%;
  height:auto;
  object-fit: contain;
}

.App {
  background-color: #0F172A;
  color: white;
  text-align: center;
}

.App-logo {
  height: 60px;
}

a {
  text-decoration: none;
  color: white;
}

nav {
  min-height: 5rem;
  position: fixed;
  width: 100%;
  background-color: #1E293B;
  color: white;
  box-shadow: 0 0 20px rgba(0,0,0,0.04);
  z-index: 99;

  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

nav div {
  display: flex;
  align-items: center;
  /* padding-left: 24px; */
}

nav div img {
  margin: 0 16px;
}

nav button {
  height: 46px;
  padding: 0 36px;
  border-radius: 40px;
  color: #1E293B;
  background: linear-gradient(135deg, #FEDF57 0%, #85DDFF 100%);
  border: none;
  font-size: 16px;
}

nav button:hover {
  cursor: pointer;
}

.nav-link {
  margin: 0 12px;
}

.nav-item:hover {
  border-bottom: 1px solid;
}

.nav-favicon {
  margin: 0 8px;
  height: 24px;
  width: 24px;
  filter: invert(1);
}

.nav-burger {
  display: none;
  flex-direction: column;
  justify-content: space-around;
  width: 2rem;
  height: 2rem;
  background: transparent;
  border: none;
  cursor: pointer;
  padding-right: 48px;
  z-index: 999;
}

.nav-burger div {
  width: 2rem;
  height: 0.15rem;
  background: white;
  border-radius: 10px;
  transition: all 0.3s linear;
  position: relative;
  transform-origin: 1px;
}

.colored-text {
  background-image: linear-gradient(45deg, #FEDF57, #85DDFF);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent; 
}

/* .fade-in-section {
  opacity: 0;
  transform: translateY(20vh);
  visibility: hidden;
  transition: opacity 1s ease-out, transform 1s ease-out;
  will-change: opacity, visibility;
}

.fade-in-section.is-visible {
  opacity: 1;
  transform: none;
  visibility: visible;
} */

.App-container {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
}

.segment {
  /* margin: 40px 0; */
  padding: 0 12px 80px 12px;
}

.segment p {
  font-family: 'Inter', sans-serif;
}

.segment:nth-child(even) {
  background: #1E293B;
}

.hero {
  padding: 6rem 200px 4rem 200px;
  display: flex;
  align-items: center;
}

.hero div {
  text-align: left;
  margin-right: 80px;
}

.hero img { /* Logo */
  height: 400px;
  width: 400px;
}

.hero div img { /* CTA button */
  object-fit: scale-down;
  height: 80px;
}

.big-numbers {
  margin: 0;
  padding: 0!important;
  width: 100%;
}

.number-container {
  width: 100%;
  display: flex;
}

.number {
  width: 100%;
  background: #FEDF57;
  color: black;
  border: 1px solid;
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.number h3 {
  font-weight: 200;
  font-size: 20px;
}

.number p {
  font-weight: 700;
}

/* .partners {
  height: 100vh;
} */

.partner-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 10px 140px;
}

.partner {
  height: 200px;
  width: 200px;
  border-radius: 50%!important;
  filter: grayscale(100%);
  /* margin: 20px; */
}

.partner:hover {
  filter: none;
}

.testimonial-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  /* padding: 0 24px; */
  gap: 10px 80px;
}

.testimonial {
  width: auto;
}

.feature-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 28px 40px;
  text-align: left;
  padding: 0 48px;
}

.feature {
  width: 600px;
  border-radius: 4px;
  box-shadow: 0 0 8px 8px #1E293B;
}

.feature img {
  width:100%;
  height:300px;
  object-fit:cover;
  object-position:50% 50%;
}

.feature p {
  font-size: 16px;
}

.feature h3, .feature p {
  padding: 0 24px;
}

.question-container {
  width: 800px;
}

.question {
  text-align: left;
  /* max-width: 100%; */
}

.question p {
  /* width: auto; */
  font-size: 16px;
  white-space: pre-line;
  word-wrap: break-word;
  /* white-space: pre-wrap; */
  word-break: break-word;
}

.wrap {
  text-align: left;
  display: flex;
  justify-content: space-between;
  align-items: center;
  /* padding: 0 24px; */
  cursor: pointer;
  /* background: red; */
}

.milestones {
  width: 100%;
  padding: 0!important;
}

.milestone-container {
  display: flex;
  width: 100%;
  white-space: nowrap;
  position: relative;
  overflow-x: scroll;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
  cursor: grab;
  transform: rotateX(180deg);
}

/* width */
.milestone-container::-webkit-scrollbar {
  width: 10px;
}

/* Track */
.milestone-container::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */
.milestone-container::-webkit-scrollbar-thumb {
  background: #DCDF86;
}

/* Handle on hover */
.milestone-container::-webkit-scrollbar-thumb:hover {
  background: #B2DEC1;
}

/* .milestone-container::-webkit-scrollbar {
  display: none;
} */

.milestone {
  padding: 0 48px;
  position: relative;
  transform: rotateX(180deg);
  /* width: 400px; */
  /* display: flex; */
  /* flex-direction: column; */
  /* justify-content: center; */
}

.milestone h3 {
  /* word-break: break-all; */
  /* white-space: normal; */
}

.milestone p {
  font-size: 16px;
  /* word-break: break-all; */
  white-space: normal;
}

/* .milestones img {
  padding: 20px 0;
  height: 24px;
  filter: brightness(0) invert(1);
} */

.milestone-tweet {
  /* background: red; */
  /* max-height: 300px; */
  display: flex;
  justify-content: center;
  /* width: 50%; */
}

.bar-container {
  width: calc(100% + 96px);
  margin: 0 -48px;
  position: relative;
}

.bar-line {
  background: white;
  width: 100%;
  height: 5px;
}

.bar-dot {
  background: #0F172A;
  width: 14px;
  height: 14px;
  border: 6px solid white;
  border-radius: 100px;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

footer {
  background: #1E293B;
  padding: 80px 0;
}

footer img {
  width: 500px;
}

footer div {
  padding: 20px 0;
}

footer h2 {
  padding: 0 48px;
}

@media (max-width: 1300px) {
  .hero {
    padding: 6rem 120px;
  }

  .feature {
    width: 400px;
  }

  nav {
    flex-direction: column;
  }

  .nav-responsive {
    min-height: 5rem;
    width: 100%;
    justify-content: space-between;
    box-shadow: 0 0 20px rgba(0,0,0,0.04);
  }

  .nav-link {
    margin: 16px 0;
  }

  .nav-burger {
    display: flex;
  }

  .nav-links {
    display: flex;
    flex-direction: column;
    height: auto;
  }
}

@media (max-width: 990px) {
  .feature {
    width: 100%;
  }

  .number-container {
    flex-direction: column;
  }

  .number {
    width: auto;
  }
}

@media (max-width: 925px) {
  .hero {
    padding: 3rem 1.5rem;
    flex-direction: column;
  }

  .hero div {
    text-align: center;
    margin: 0;
  }

  .hero img {
    height: 300px;
    width: 300px;
  }
}

@media (max-width: 850px) {
  .question-container {
    width: 600px;
  }
}

@media (max-width: 680px) {
  .question-container {
    width: 400px;
  }

  .testimonial-container {
    flex-direction: column;
  }

  footer img {
    width: 350px;
  }
}

@media (max-width: 470px) {
  .question-container {
    width: 260px;
  }

  footer img {
    width: 280px;
  }

  .segment {
    /* padding: 50px 120px; */
    /* padding: 24px 0; */
  }

  .hero img {
    height: 200px;
    width: 200px;
  }
}

